Name:                jvm-parser
Version:             0.2
License:             AllRightsReserved
Author:              Joe Hendrix <jhendrix@galois.com>
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.8
Synopsis:            A parser for JVM bytecode (.class) files
Description:

Library
  Hs-source-dirs:      src
  Exposed-modules:     Language.JVM.CFG
                       Language.JVM.Common
                       Language.JVM.JarReader
                       Language.JVM.Parser

  Ghc-options:         -Wall

  Build-depends:       array,
                       base       >= 4.0.0.0 && < 5.0.0.0,
                       binary,
                       bytestring,
                       containers,
                       data-binary-ieee754,
                       dom-lt,
                       fingertree,
                       zlib,
                       pretty