Name:                jvm-parser
Version:             0.3.0.0
License:             BSD3
License-file:        LICENSE
Author:              Galois, Inc.
Maintainer:          atomb@galois.com
Copyright:           (c) 2012-2014 Galois Inc.
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.8
extra-source-files:  test/support/Makefile, test/support/*.java
Synopsis:            A parser for JVM bytecode files
Description:
  A parser for JVM bytecode (.class and .jar) files

source-repository head
  type: git
  location: https://github.com/GaloisInc/jvm-parser.git

Library
  Hs-source-dirs:      src
  Exposed-modules:     Language.JVM.CFG
                       Language.JVM.Common
                       Language.JVM.JarReader
                       Language.JVM.Parser

  Ghc-options:         -Wall

  Build-depends:       array,
                       base       >= 4.0.0.0 && < 5.0.0.0,
                       binary,
                       bytestring,
                       containers,
                       fgl,
                       fingertree,
                       prettyprinter >= 1.7.0,
                       text,
                       zlib

test-suite test-jvm-parser
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base,
                 deepseq,
                 directory,
                 filepath,
                 HUnit,
                 jvm-parser,
                 tasty,
                 tasty-hunit
